Add unicorn horse model config and attachment handling